fix some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 .top_section {
   background-color: white;
-  padding: 10px calc(7% + 5px);
+  padding: 30px calc(7% + 5px);
   border: 1px solid #d8d9da;
   border-bottom: none;
 }
@@ -25,17 +25,17 @@
   display: flex;
   justify-content: center;
   margin: 10px 0;
+  gap: 12px;
 }
 
 .row-spacer {
-  margin: 10px 0;
+  margin-top: 20px;
 }
 
 .column {
   display: flex;
   flex: 1;
   flex-direction: column;
-  padding: 1%;
 }
 
 .center {
@@ -114,7 +114,7 @@ select {
   font-size: small;
   color: red;
   position: relative;
-  top: -13px;
+  top: -10px;
   height: 0;
 }
 
